--- a/02 스프링 부트에서 테스트 코드를 작성하자.md
+++ b/02 스프링 부트에서 테스트 코드를 작성하자.md
@@ -1,9 +1,48 @@
 # 스프링 부트에서 테스트 코드를 작성하자
 
-# 1. TDD(Test Driven Development)란?
+## 1. TDD(Test Driven Development)란?
 
 테스트 주도개발(TDD)은 소프트웨어를 개발하는 여러 방법중 하나이다.<br>
 완성된 프로젝트가 오류가 없이 정상적으로 작동하는지 확인하기 위해 모든 코드를 테스트를 거치게된다.<br>
 제품의 전체 기능 구현과는 별개로, 큰 기능들 중 하나씩 기능들이 정상적으로 작동되는지 검증하기 위한 테스트 코드를 작성한다.<br>
 
+## 2. TDD를 왜 해야하는가?
 
+1. 개발단계 초기에 문제를 발견 할 수 있음<br>
+2. 코드를 리펙토링 하거나 라이브러리 업그레이드 등에서 기존 기능이 올바르게 작동하는 지 확인할 수 있음<br>
+3. 기능의 불확실성을 감소시킬 수 있음<br>
+4. 시스템의 실제 문서를 제공하고, 단위테스트 자체가 문서가 될 수 있음<br>
+5. 사람이 눈으로 검증하지 않아도 자동으로 검증할 수 있음<br>
+6. 새로운 기능이 추가되도, 모든 기능을 테스트하지않고 나머지를 테스트 할 수 있음<br>
+
+## 3. 책 내용과 달라진 점(트러블 슈팅)
+
+gradle<br>
+```
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' //테스트 케이스 작동
+    compileOnly 'org.projectlombok:lombok' // compile 시에만 빌드하고 빌드 결과물에는 포함하지 않는다.
+    annotationProcessor 'org.projectlombok:lombok' //컴파일 타임에 어노테이션을 스캔하고 처리하기 위한것
+
+```
+<br>
+@Annotation<br>
+<br>
+코드 변경점<br>
+
+```
+RunWith -> ExtendWith
+@RunWith(SpringRunner.class) : 테스트 진행 시 Junit이 아닌 다른 실행자 실행, 스프링 부트와 Junit 간 연결(junit 4)
+-> 2.4.1 버전에서 사용되지 않아,
+@ExtendWith(SpringExtension.class) 로 변경하여야 사용 가능함(junit 5)
+```
+주의 할 점<br>
+static class들은 import가 자동으로 되지않아 class() 인 상태에서만 정상적으로 자동 import가 잡힘<br>
+아래 라이브러리를 수동으로 추가하는것이 좋음
+
+```
+import static org.hamcrest.Matchers.is;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+```
