--- a/02 스프링 부트에서 테스트 코드를 작성하자.md
+++ b/02 스프링 부트에서 테스트 코드를 작성하자.md
@@ -15,34 +15,57 @@
 5. 사람이 눈으로 검증하지 않아도 자동으로 검증할 수 있음<br>
 6. 새로운 기능이 추가되도, 모든 기능을 테스트하지않고 나머지를 테스트 할 수 있음<br>
 
-## 3. 책 내용과 달라진 점(트러블 슈팅)
+### 2.1.패키지 생성 및 테스트 코드 작성 방법
+1. 패키지 생성 : 패키지명은 웹 사이트 주소의 역순으로 해주는 것이 일반적임.    
+2. Application.class 작성   
+3. HelloController 작성    
+4. HelloControllerTest.class 작성   
 
-gradle<br>
-```
-    testImplementation 'org.springframework.boot:spring-boot-starter-test' //테스트 케이스 작동
-    compileOnly 'org.projectlombok:lombok' // compile 시에만 빌드하고 빌드 결과물에는 포함하지 않는다.
-    annotationProcessor 'org.projectlombok:lombok' //컴파일 타임에 어노테이션을 스캔하고 처리하기 위한것
+### 2.2 스프링 문법 + 테스트 코드에서 사용한 문법
 
-```
-<br>
-@Annotation<br>
-<br>
-코드 변경점<br>
+**@SpringBootApplication 어노테이션**
 
-```
-RunWith -> ExtendWith
-@RunWith(SpringRunner.class) : 테스트 진행 시 Junit이 아닌 다른 실행자 실행, 스프링 부트와 Junit 간 연결(junit 4)
--> 2.4.1 버전에서 사용되지 않아,
-@ExtendWith(SpringExtension.class) 로 변경하여야 사용 가능함(junit 5)
-```
-주의 할 점<br>
-static class들은 import가 자동으로 되지않아 class() 인 상태에서만 정상적으로 자동 import가 잡힘<br>
-아래 라이브러리를 수동으로 추가하는것이 좋음
+* 스프링 부트 자동설정   
+* 스프링 Bean 읽기와 생성을 모두 자동으로 설정      
+@SpringBootApplication이 위치한 클래스로부터 설정을 읽어 나가기 때문에 해당 어노테이션이 위치한 클래스를 다른 클래스보다 프로젝트의 최상단에 위치시켜야함.
 
-```
-import static org.hamcrest.Matchers.is;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-```
+SpringApplication.run을 통해 내장 WAS를 실행시키면 Tomcat을 별도로 설치하지 않아도 어떤 환경에서든지 jar로만 배포가 가능
+
+
+**@RestController 어노테이션**
+
+* 컨트롤러를 JSON으로 반환하는 컨트롤러로 만들어줌
+* @ResponseBody + @Controller로 선언했던 것을 한번에 사용할 수 있게 해준것.
+* [블로그에 정리](https://its-ward.tistory.com/entry/Controller%EC%99%80-RestController-%EB%8F%99%EC%9E%91-%EB%B0%A9%EC%8B%9D-%EB%B0%8F-%EC%B0%A8%EC%9D%B4%EC%A0%90)
+
+
+**@Autowired 어노테이션**
+
+* 스프링이 관리하는 빈(bean-객체)을 주입받는다.
+
+**private MockMvc mvc**
+
+* 웹 API를 테스트 할 때 사용한다.  
+* 스프링 MVC 테스트의 시작점이다.  
+* 이 클래스를 통해 HTTP GET, POST 등에 대한 API 테스트를 할 수 있다.  
+
+**.andExpect()**
+* mvc.perform의 결과를 검증함. 
+
+**.@RequiredArgsConstructor**.
+
+* 선언된 모든 final 필드가 포함된 생성자를 생성함  
+* final이 없는 필드는 생성자에 포함되지 않음.
+생성자를 생성하고 생성자를 통해서 값을 주입 받음.
+
+**.isEqualTo()**
+
+* assertj의 동등 비교 메소드
+* assertThat에 있는 값과 isEqualTo()의 값을 비교해서 같을때만 성공임.
+
+
+
+
+
+
+
