--- a/04 머스테치로 화면 구성하기.md
+++ b/04 머스테치로 화면 구성하기.md
@@ -159,5 +159,160 @@ public class IndexControllerTest {
 ```
 
 해당 코드에서 작성된 주소 ```/posts/save```를 매핑하는 Controller를 작성한다.
+```/posts/save```를 호출하면 ```posts-save.mustache```를 호출한다.
 
+```java
+@RequiredArgsConstructor
+@Controller
+public class IndexController {
+
+    @GetMapping("/")
+    public String index(){
+        return "index";
+    }
+
+    @GetMapping("/posts/save")
+    public String postsSave(){
+        return "posts-save";
+    }
+}
+
+```
+
+게시글을 등록할 수 있는 save munstache도 작성한다.
+
+```mustache
+{{>layout/header}}
+
+<h1>게시글 등록</h1>
+<div class="col-md-12">
+    <div class="col-md-4">
+        <form>
+            <div class="form-group">
+                <label for="title">제목</label>
+                <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
+            </div>
+            <div class="form-group">
+                <label for="author"> 작성자</label>
+                <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">
+            </div>
+            <div class="form-group">
+                <label for="content"> 내용</label>
+                <textarea class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>
+            </div>
+        </form>
+        <a href="/" role="button" class="btn btn-secondary">취소</a>
+        <button type="button" class="btn btn-primary" id="btn-save">등록</button>
+    </div>
+</div>
+{{>layout/footer}}
+```
+
+
+### 2.3 index.js 작성 
+게시글 등록화면에서 버튼클릭 이벤트를 js를 이용해 작성한다.
+ ```src/main/resources``` 위치에
+ ```static/js/app```디렉토리를 생성한 후 ```index.js``` 파일을 생성하여 아래 코드를 작성한다.
+
+```javascript
+var main = {
+    init : function () {
+        var _this = this;
+        $('#btn-save').on('click', function(){
+            _this.save();
+        })
+    },
+    save : function () {
+        var data = {
+            title: $('#title').val(),
+            author: $('#author').val(),
+            content: $('#content').val()
+        };
+
+        $.ajax({
+            type: 'POST',
+            url: '/api/v1/posts',
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            data: JSON.stringify(data)
+        }).done(function(){
+            alert('글이 등록되었습니다.');
+            window.location.href = "/";
+        }).fail(function(error){
+            alert(JSON.stringify(error));
+        });
+    },
+};
+
+
+모두 작성 되었다면, index.js를 적용시키기위해 footer.nustache에 적용한다.
+
+```mustache
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- index.js 추가 -->
+<script src="/js/app/index.js"></script>
+</body>
+</html>
+```
+
+
+## 2.4 전체 조회화면 제작
+
+조회 UI를 위해 index.mustache를 수정한다
+
+```mustache  
+{{>layout/header}}
+    <h1>스프링 부트로 시작하는 웹 서비스 ver.2</h1>
+    <div class="col-md-12">
+        <!-- 로그인 기능 영역 -->
+        <div class="row">
+            <div class="col-md-6">
+                            <!--글 등록 버튼을 누르면 /posts/save로 이동합니다-->
+                <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+            </div>
+        </div>
+    </div>
+    <br>
+    <!-- 목록 출력 영역 -->
+    <table class="table table-horizontal table-bordered">
+        <thead class="thead-string">
+            <tr>
+                <th>게시글번호</th>
+                <th>제목</th>
+                <th>작성자</th>
+                <th>최종수정일</th>
+            </tr>
+        </thead>
+        <tbody id="tbody">
+        <!-- Java의 for문과 동일, posts라는 List를 순회함 -->
+            {{#posts}}
+                <tr>
+                    <td>{{id}}</td>
+                    <td>{{title}}</td>
+                    <td>{{author}}</td>
+                    <td>{{modifiedDate}}</td>
+                </tr>
+            {{/posts}}
+        </tbody>
+    </table>
+{{>layout/footer}}
+```   
+
+프론트 엔드 부분을 모두 제작하였다면
+조회를 위해서 기존에 있던 Controller, Service, Repository 에 코드를 추가한다.
+springDataJpa에서 제공해주는 CRUD 외에도 추가로  ```@Query```어노테이션을 이용해 쿼리를 작성하여, 필요한 정보를 가지고 올 수 있다.
+
+PostsRepository부분에 다음과 같이 추가한다.
+
+```java
+
+public interface PostsRepository extends JpaRepository<Posts,Long> {
+
+    @Query("SELECT p FROM Posts p ORDER BY p.id DESC")
+    List<Posts> findAllDesc();
+}
+
+```
 
