Update 04 머스테치로 화면 구성하기.md

--- a/04 머스테치로 화면 구성하기.md
+++ b/04 머스테치로 화면 구성하기.md
@@ -468,8 +468,9 @@ posts-update.mustache
 
 -update function을 하나 추가한다.
 
-index.js     
-```javascript
+index.js 
+
+```java
 var main = {
     init : function () {
         var _this = this;
@@ -521,6 +522,7 @@ var main = {
         });
     },
 };
+```
 
 ```$('#btn-update').on('click')```
 
